# Logger

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.sh  push.sh  run.sh
.github/workflows/: msbuild.yml
include/: Logger.hpp
src/: Logger.cc  test.cpp  test1.cpp  test2.cpp
test/: test.cc  test.cpp  test1
